fixed wrong font color

--- a/css/kettlebell_style.css
+++ b/css/kettlebell_style.css
@@ -45,6 +45,7 @@ button {
 form {
   font-size: 2em;
   font-family: sans-serif;
+  color: white;
   display: inline-block;
   text-align: left;
 }
